--- a/poko.css
+++ b/poko.css
@@ -110,7 +110,7 @@ header {
 button {
 	font-weight: 900;
 	background-color: #366CB4;
-	/* color: rgb(255 128 223 / 1); */
+	/* color: rgb(39, 26, 26); */
 	cursor: pointer;
 	display: inline-flex;
 	font-size: 2rem;
@@ -161,22 +161,22 @@ button {
 	align-items: center;
 	justify-content: center;
 	transition: 0.2s ease-in-out;
-	border: 2px solid rgb(255 128 223 / 1);
-	border-bottom: 5px solid rgb(255 128 223 / 1);
+	border: 2px solid rgb(39, 26, 26);
+	border-bottom: 5px solid rgb(39, 26, 26);
 }
 
 .main-button button.launch:hover,
 .main-button button.docs:hover,
 button:hover {
-	border-bottom: 6px solid rgb(255 128 223 / 1);
+	border-bottom: 6px solid rgb(39, 26, 26);
 }
 .main-button button.launch:active,
 .main-button button.docs:active,
 button:active {
 	transition: 0.1s ease-in-out;
 	height: 50px;
-	border-bottom: 2px solid rgb(255 128 223 / 1);
-	border-top: 3px solid rgb(255 128 223 / 1);
+	border-bottom: 2px solid rgb(39, 26, 26);
+	border-top: 3px solid rgb(39, 26, 26);
 }
 
 .section-12 {
@@ -189,7 +189,7 @@ button:active {
 	background-color: #000000;
 	margin: 30px;
 	padding: 20px;
-	border: 2px solid rgb(255 128 223 / 1);
+	border: 2px solid rgb(39, 26, 26);
 	border-radius: 50px;
 	width: 1050px;
 	box-shadow: rgba(5, 5, 5, 0.2) 0px 11px 15px 0px,
@@ -942,7 +942,7 @@ footer p {
 	height: 60px;
 	margin-top: 20px;
 	width: 250px;
-	border: 2px solid rgb(39, 26, 26);
+	/* border: 2px solid #; */
 	font-weight: 700;
 }
 
@@ -1196,7 +1196,7 @@ img.right-img {
 	}
 	.whole {
 		background-color: #000000;
-		border: 2px solid rgb(255 128 223 / 1);
+		border: 2px solid rgb(39, 26, 26);
 		padding: 40px;
 		margin: 30px;
 		border-radius: 20px;
